@@ -1,3 +1,8 @@
+2013-09-16  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: bug fix: fixed packet ordering regression introduced
+        in 6.4.0 if --default-duration is used for a track.
+
 2013-09-15  Moritz Bunkus  <moritz@bunkus.org>
 
         * Released v6.4.0.
